# hello-llm

./: .gitignore  README.md  hello.py  pyproject.toml
app/: agent_test.py  langchain-test.py  llama_index_test.py  product_advertising.py  sentence_generator.py
app/utils/: config.py
