[project]
name = "hello-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-community>=0.3.17",
    "langchain-deepseek>=0.1.2",
    "litellm>=1.61.6",
    "python-dotenv>=1.0.1",
    "ruff>=0.9.6",
    "smolagents>=1.9.2",
    "tiktoken>=0.9.0",
]

[tool.ruff.lint]
select = ["E", "F", "I", 'N']
