[project]
name = "hello-llm"
version = "2026.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-community>=0.4.1",
    "langchain-deepseek>=1.0.1",
    "litellm>=1.82.2",
    "llama-index>=0.14.16",
    "python-dotenv>=1.2.2",
    "smolagents>=1.24.0",
    "tiktoken>=0.12.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.6",
    "ty>=0.0.23",
]

[tool.ruff.lint]
select = ["E", "F", "I", 'N']
